changed game.id to game.slug in some templates

--- a/machiavelli/templates/machiavelli/turn_log_list.html
+++ b/machiavelli/templates/machiavelli/turn_log_list.html
@@ -43,6 +43,6 @@
 <dd>{{ l|linebreaksbr }}</dd>
 </dl>
 {% endfor %}
-<p><a href="{% url show-game game.id %}">{% trans "Return to game" %}</a></p>
+<p><a href="{% url show-game game.slug %}">{% trans "Return to game" %}</a></p>
 
 {% endblock %}
