--- a/machiavelli/templates/machiavelli/log_list.html
+++ b/machiavelli/templates/machiavelli/log_list.html
@@ -37,6 +37,6 @@
 {% endfor %}
 </ul>
 
-<p><a href="{% url show-game game.id %}">{% trans "Return to game" %}</a></p>
+<p><a href="{% url show-game game.slug %}">{% trans "Return to game" %}</a></p>
 
 {% endblock %}
