--- a/machiavelli/templates/machiavelli/game_form.html
+++ b/machiavelli/templates/machiavelli/game_form.html
@@ -37,7 +37,8 @@ phases of the game. This time limit is reset when all the players have completed
 <div style="width: 50%">
 <form action="{% url new-game %}" method="post" class="uniForm">
 <fieldset class="inlineLabels">
-{{ form|as_uni_form }}
+{{ game_form|as_uni_form }}
+{{ config_form|as_uni_form }}
 <div class="form_block">
 <input type="submit" value="{% trans "Save" %}" />
 </div>
