--- a/machiavelli/templates/machiavelli/show_game.html
+++ b/machiavelli/templates/machiavelli/show_game.html
@@ -25,8 +25,15 @@
 		{% endifnotequal %}
 </li>
 {% endif %}
+{% if rules %}
+<li id="game_rules">
+{% trans "Enabled rules" %}: {{ rules|join:", " }}
+</li>
+{% endif %}
 </ul>
 </div>
+
+
 
 <div class="col1">
 <div id="powers">
