added game rules icons

--- a/machiavelli/templates/machiavelli/game_list.html
+++ b/machiavelli/templates/machiavelli/game_list.html
@@ -20,6 +20,7 @@ you can also create one, but it's better if you join an existing game.{% endbloc
 	<th>{% trans "Year" %}</th>
 	<th>{% trans "Season" %}</th>
 	<th>{% trans "Phase" %}</th>
+	<th>{% trans "Rules" %}</th>
 	<th>{% trans "Slots" %}</th>
 	</tr>
 	</thead>
@@ -46,6 +47,7 @@ you can also create one, but it's better if you join an existing game.{% endbloc
 	<th>{% trans "Year" %}</th>
 	<th>{% trans "Season" %}</th>
 	<th>{% trans "Phase" %}</th>
+	<th>{% trans "Rules" %}</th>
 	<th>{% trans "Slots" %}</th>
 	</tr>
 	</thead>
