--- a/machiavelli/templates/machiavelli/game_form.html
+++ b/machiavelli/templates/machiavelli/game_form.html
@@ -38,6 +38,7 @@ phases of the game. This time limit is reset when all the players have completed
 <form action="{% url new-game %}" method="post" class="uniForm">
 <fieldset class="inlineLabels">
 {{ game_form|as_uni_form }}
+<h3>{% trans "Rules" %}</h3>
 {{ config_form|as_uni_form }}
 <div class="form_block">
 <input type="submit" value="{% trans "Save" %}" />
