--- a/machiavelli/templates/machiavelli/orders_actions.html
+++ b/machiavelli/templates/machiavelli/orders_actions.html
@@ -8,31 +8,53 @@
 <p>{% blocktrans %}At least one player has not yet sent his orders. You have to wait until all
 players have done it or the time limit is reached.{% endblocktrans %}</p>
 <p>{% blocktrans %}These are the valid orders (except Hold orders) that you have sent this turn:{% endblocktrans %}</p>
-<ul>
-{% for o in orders %}
-<li>{{ o.get_message|capfirst }}</li>
-{% endfor %}
-</ul>
 {% else %}
-<script type="text/javascript" src="{{ STATIC_URL }}machiavelli/js/orders_form.js"></script>
 <p>{% blocktrans %}
 In the next form, you have to compose an order for each of your units. You cannot give a unit two
 orders. If you want a unit to do nothing, select the "Hold" option for it.
 {% endblocktrans %}</p>
 <p>{% blocktrans %}If you compose an order that break the rules, you should see an error and you will have to fix the order. However, if you compose an impossible order, this unit will hold, instead of carrying out its order. Be careful.{% endblocktrans %}</p>
+{% if order_form %}
 <div class="action_form">
-<p>{{ orders_formset.non_form_errors}}</p>
-<form action="{% url show-game game.slug %}" method="post">
-<table>
-<tr>
-<th style="width: 12%">{% trans "Unit" %}</th>
-<th style="width: 12%">{% trans "Order" %}</th>
-<th colspan="6" style="text-align: left">{% trans "Parameters" %}</th></tr>
-{{ orders_formset.as_row }}
-</table>
+<form action="{% url show-game game.slug %}" method="post" id="order_form">
+<div id="emsg">&nbsp;</div>
+<fieldset>
+{{ order_form.as_p }}
+</fieldset>
 <p><input type="submit" value="{% trans "Send" %}" /></p>
 </form>
 </div>
 {% endif %}
+{% endif %}
 
+<h3>{% trans "Sent orders" %}</h3>
+<div id="so_emsg">&nbsp;</div>
+<ul id="sent_orders">
+{% for order in sent_orders %}
+<li id="order_{{ order.id }}">{{ order.explain }}
+{% ifequal order.confirmed 0 %}
+(<a href="{% url delete-order game.slug order.id %}" class="delete_order">{% trans "Delete" %}</a>)
+{% endifequal %}
+</li>
+{% endfor %}
+</ul>
+
+{% ifequal player.done 0 %}
+<form action="{% url confirm-orders game.slug %}" method="POST" />
+<p>{% blocktrans %}The orders above are saved but <strong>are not confirmed</strong>. If you don't confirm your orders, they will be ignored.{% endblocktrans %}</p>
+<p>{% blocktrans %}Once you have confirmed your orders, you will not be able to change or delete them. To confirm the orders and end your phase, click the "Confirm" button.{% endblocktrans %}</p>
+<input type="submit" value="{% trans "Confirm" %}" />
+</form>
+{% endifequal %}
+
+{% endblock %}
+
+{% block extra_game %}
+{% if order_form %}
+<script>
+	var game_url = "{% url show-game game.slug %}";
+	var delete_text = "{% trans "Delete" %}";
+</script>
+	{{ order_form.media }}
+{% endif %}
 {% endblock %}
