--- a/machiavelli/templates/machiavelli/game_list.html
+++ b/machiavelli/templates/machiavelli/game_list.html
@@ -110,7 +110,7 @@ you will get some karma for your sacrifice.{% endblocktrans %}</p>
 	{% for game in finished_games %}
 	<tr>
 		<td><a href="{{ game.get_absolute_url }}">{{ game.slug }}</a></td>
-		<td>{{ game.scenario.title }}</td>
+		<td><a href="{% url show-scenario game.scenario.pk %}">{{ game.scenario.title }}</a></td>
 	</tr>
 	{% endfor %}
 
