--- a/templates/default/profiles/profile.html
+++ b/templates/default/profiles/profile.html
@@ -2,7 +2,7 @@
 
 {% load i18n %}
 {% load avatar_tags %}
-{% load uni_form %}
+{% load uni_form_tags %}
 {% load group_tags %}
 {% load microblogging_tags %}
 {% load blog_tags %}
