--- a/templates/default/profiles/profile_form.html
+++ b/templates/default/profiles/profile_form.html
@@ -1,4 +1,4 @@
-{% load uni_form %}
+{% load uni_form_tags %}
 
 <form class="uniForm" method="POST" action="{% url profile_edit %}">
     {% csrf_token %}
