--- a/machiavelli/templates/machiavelli/show_game.html
+++ b/machiavelli/templates/machiavelli/show_game.html
@@ -151,6 +151,7 @@ the page in a few seconds.{% endblocktrans %}
 {% if map %}
 	<script type="text/javascript">
 		var STATIC_URL = "{{ STATIC_URL }}"
+		ver MEDIA_URL = "{{ MEDIA_URL }}"
 	</script>
 	<!-- Import the prototype library -->
 	<script type="text/javascript" src="{{ STATIC_URL }}machiavelli/js/prototype-1.5.0.js"></script>
@@ -165,7 +166,7 @@ the page in a few seconds.{% endblocktrans %}
 	
 	window.onload = function() {
 		viewer = new experience.panorama.Viewer({
-			ImageURL: STATIC_URL + "machiavelli/maps/{{ map }}",
+			ImageURL: MEDIA_URL + maps/{{ map }}",
 			ImageWidth: 1250,
 			ImageHeight: 1780,
 			RenderIn: 'map',
