--- a/machiavelli/templates/machiavelli/hall_of_fame.html
+++ b/machiavelli/templates/machiavelli/hall_of_fame.html
@@ -16,7 +16,7 @@ server{% endblocktrans %}</p>
 	<th>{% trans "Score" %}</th>
 	</tr>
 	</thead>
-	{% for p in profiles %}
+	{% for p in profiles.object_list %}
 	<tr>
 	<td><a href="{% url profile_detail username=p.user.username %}">{{ p }}</a></td>
 	<td class="data_c">
@@ -30,4 +30,19 @@ server{% endblocktrans %}</p>
 	{% endfor %}
 
 </table>
+<div class="pagination">
+	<span class="step-links">
+		{% if profiles.has_previous %}
+			<a href="?page={{ profiles.previous_page_number }}">&lt;&lt;</a>
+		{% endif %}
+		
+		<span class="current">
+			{% trans "Page" %} {{ profiles.number }} {% trans "of" %} {{ profiles.paginator.num_pages }}.
+		</span>
+
+		{% if profiles.has_next %}
+			<a href="?page={{ profiles.next_page_number }}">&gt;&gt;</a>
+		{% endif %}
+	</span>
+</div>
 {% endblock %}
