--- a/templates/site_base.html
+++ b/templates/site_base.html
@@ -6,7 +6,7 @@
 {% block extra_head_base %}
     <link rel="stylesheet" href="{{ STATIC_URL }}css/site_tabs.css" />
 	<link rel="stylesheet" href="{{ STATIC_URL }}machiavelli/css/game.css" />
-	<link rel="shortcut icon" href="/favicon.ico" />
+	<link rel="shortcut icon" href="{{ STATIC_URL }}images/favicon.ico" />
 	<meta name="Title" content="Condottieri - Multiplayer Game of War, Politics and Treachery">
 	<meta name="Author" content="Jose Antonio Martin">
 	<meta name="Subject" content="Online Machiavelli game">
@@ -25,7 +25,7 @@
 {% endblock %}
 
 {% block logo_link_image %}
-<a href="{% url home %}"><img class="logo" src="{{ STATIC_URL }}machiavelli/img/logo.png" /></a>
+<a href="{% url home %}"><img class="logo" src="{{ STATIC_URL }}images/logo.png" /></a>
 {% endblock %}
 
 {% block right_tabs %}
