added foss notice, and cleaned spanish translation at project level (not apps)

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -35,6 +35,16 @@
 		This project is in <i>beta</i> status, so it can have (sure it has) errors. Hopefully these errors will be fixed as soon as they are detected.
 		{% endblocktrans %}
 	</p>
+	<h3>{% trans "Condottieri is Libre Software" %}</h3>
+	<p>
+		{% blocktrans %}<b>Condottieri</b> is free and open source software, and
+		as such, you are free to copy, improve and modify it, under the terms
+		of the Affero GNU/GPL-3 License.{% endblocktrans %}
+	</p>
+	<p>
+		{% blocktrans %}You can get a copy of the source code in the{% endblocktrans %}
+		<a href="http://github.com/jantoniomartin/condottieri">{% blocktrans %}public repository{% endblocktrans %}</a>.
+	</p>
 	<h2>{% trans "Features" %}</h2>
 	<p>{% blocktrans %}The following is a list of the main current features of this site.{% endblocktrans %}</p>
 	<ul>
