corrected typo in machiavelli/retreats_actions.html

--- a/machiavelli/templates/machiavelli/retreats_actions.html
+++ b/machiavelli/templates/machiavelli/retreats_actions.html
@@ -15,7 +15,7 @@ players have done it or the time limit is reached.{% endblocktrans %}</p>
 <p>{% blocktrans %}
 Some of your units have been defeated and must retreat. For each unit, you can decide a retreat area
 or even disband the unit. If a unit has been defeated and has no possible retreat, it will be
-disbandesd.
+disbanded.
 {% endblocktrans %}</p>
 {% for f in retreat_forms %}
 <p>{{ f }}</p>
