--- a/machiavelli/templates/machiavelli/show_game.html
+++ b/machiavelli/templates/machiavelli/show_game.html
@@ -12,7 +12,21 @@
 <li>{% trans "Year" %}: {{ game.year|default_if_none:"" }}</li>
 <li>{% trans "Season" %}: {{ game.get_season_display|default_if_none:"" }}</li>
 <li>{% trans "Phase" %}: {{ game.get_phase_display }}</li>
-<li>{% trans "Time left" %}: {{ game.next_phase_change|timeuntil }}</li>
+<li>{% trans "Time left" %}: 
+{% if player %}
+	{% if time_exceeded %}
+	<span style="color: LightCoral">
+	{{ game.next_phase_change|timeuntil }} 
+	</span>
+	{% else %}
+	<span style="color: Green">
+	{{ player.next_phase_change|timeuntil }}
+	</span>
+	{% endif %}
+{% else %}
+	{{ game.next_phase_change|timeuntil }}</li>
+{% endif %}
+</li>
 {% if player %}
 <li>{% trans "Power" %}:
 	{% if player.country %}
