added user scores link to user profile

--- a/condottieri_profiles/templates/condottieri_profiles/profile_detail.html
+++ b/condottieri_profiles/templates/condottieri_profiles/profile_detail.html
@@ -24,7 +24,9 @@
 <dd>{{ user_shown.get_profile.karma }}</dd>
 {% endif %}
 <dt>{% trans "Total score" %}</dt>
-<dd>{{ user_shown.get_profile.total_score }}</dd>
+<dd>{{ user_shown.get_profile.total_score }}
+(<a href="{% url ranking "user" user_shown.username %}">{% trans "Detail" %}</a>)
+</dd>
 </dl>
 
 {% if is_own %}
