removed references to pinax facebox and old profiles templates

--- a/media/pinax/css/base.css
+++ b/media/pinax/css/base.css
@@ -7,7 +7,7 @@ body {
     background-color: #111;
     margin: 0;
     color: #BBB;
-    font-family: "Lucida Sans Unicode", sans-serif;
+    font-family: Arial, Helvetica, Tahoma, sans-serif;
     font-size: 10pt;
 }
 a, a:visited {
