added functionality for visible/hidden usernames in games

--- a/machiavelli/templates/machiavelli/summary.html
+++ b/machiavelli/templates/machiavelli/summary.html
@@ -22,6 +22,7 @@
 	<th>{% trans "Season" %}</th>
 	<th>{% trans "Phase" %}</th>
 	<th>{% trans "Rules" %}</th>
+	<th>{% trans "Visible players" %}</th>
 	<th>{% trans "Slots" %}</th>
 	</tr>
 	</thead>
@@ -49,6 +50,7 @@
 	<th>{% trans "Season" %}</th>
 	<th>{% trans "Phase" %}</th>
 	<th>{% trans "Rules" %}</th>
+	<th>{% trans "Visible players" %}</th>
 	<th>{% trans "Slots" %}</th>
 	</tr>
 	</thead>
