--- a/machiavelli/media/machiavelli/css/game.css
+++ b/machiavelli/media/machiavelli/css/game.css
@@ -53,7 +53,8 @@ tr.closed_game a{
 	padding-right: 0.5%;
 	margin-left: 0;
 	margin-right: 1%;
-	height: 740px;
+	/*height: 740px;*/
+	height: 900px;
 	border: solid 1px #444;
 }
 
@@ -166,7 +167,8 @@ tr.closed_game a{
 
 #map {
 	width: 100%;
-	height: 740px;
+	/*height: 740px;*/
+	height: 900px;
 }
 
 #log {
