--- a/machiavelli/templates/machiavelli/show_game.html
+++ b/machiavelli/templates/machiavelli/show_game.html
@@ -22,7 +22,7 @@
 <li>{% trans "Season" %}: {{ game.get_season_display|default_if_none:"" }}</li>
 <li>{% trans "Phase" %}: {{ game.get_phase_display }}</li>
 <li>{% trans "Time left" %}: 
-{% if player %}
+{% if player and game.slots == 0 %}
 	{% if time_exceeded %}
 	<span style="color: LightCoral">
 	{{ game.next_phase_change|timeuntil }} 
@@ -78,6 +78,9 @@
 	<img src="{{ STATIC_URL }}machiavelli/img/excommunication-icon-16.png" />
 	{% endif %}
 	</div>
+	{% if show_users %}
+	<div><a href="{% url profile_detail username=p.user.username %}">{{ p.user.username }}</a></div>
+	{% endif %}
 	<div>{% trans "Cities:" %} {{ p.number_of_cities }}</div>
 	<div>{% trans "Units:" %} {{ p.number_of_units }}</div>
 {% if player %}
