--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,5 @@
+{% load ifsetting_tag %}
+
 {% load i18n %}
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" dir="{% if LANGUAGE_BIDI %}rtl{% else %}ltr{% endif %}" xml:lang="{{ LANGUAGE_CODE }}" lang="{{ LANGUAGE_CODE }}">
@@ -69,6 +71,9 @@
         <script src="{{ STATIC_URL }}pinax/js/jquery-1.3.2.min.js" type="text/javascript"></script>
         <script src="{{ STATIC_URL }}pinax/js/base.js" type="text/javascript"></script>
         <script src="{{ STATIC_URL }}uni_form/uni-form.jquery.js" type="text/javascript"></script>
+		{% ifsetting INCLUDE_GOOGLE_ANALYTICS %}
+			{% include 'ganalytics.html' %}
+		{% endifsetting %}
         {% block extra_body_base %}
             {% block extra_body %}{% endblock %}
         {% endblock %}
