--- a/machiavelli/templates/machiavelli/summary.html
+++ b/machiavelli/templates/machiavelli/summary.html
@@ -2,6 +2,7 @@
 
 {% load i18n %}
 {% load forum_tags %}
+{% load game_icons %}
 
 {% block head_title %}{% blocktrans %}Games{% endblocktrans %}{% endblock %}
 
@@ -17,21 +18,53 @@
 	<th>{% trans "Game" %}</th>
 	<th>{% trans "Scenario" %}</th>
 	<th>{% trans "Creator" %}</th>
-	<th>{% trans "Time limit" %}</th>
 	<th>{% trans "Year" %}</th>
 	<th>{% trans "Season" %}</th>
 	<th>{% trans "Phase" %}</th>
+	<th>{% trans "Time left" %}</th>
 	<th>{% trans "Rules" %}</th>
 	<th>{% trans "Visible players" %}</th>
 	<th>{% trans "Slots" %}</th>
 	</tr>
 	</thead>
-	{% for game in your_games %}
+	{% for player in your_players %}
 	<tr>
-		{% include 'machiavelli/game_row_inc.html' %}
-		<td>{{ game.slots }}
-		{% ifnotequal game.slots 0 %}
-			<a href="{% url leave-game game.slug %}">{% trans "Leave game" %}</a>
+		<td><a href="{{ player.game.get_absolute_url }}">{{ player.game.slug }}</a></td>
+		<td><a href="{% url show-scenario player.game.scenario.pk %}">{{ player.game.scenario.title }}</a></td>
+		<td>{{ player.game.created_by }}</td>
+		<td class="data_c">
+		{% if player.game.year %}
+			{{ player.game.year }}
+		{% endif %}
+		</td>
+		<td class="data_c">
+		{% if player.game.season %}
+			{{ player.game.get_season_display }}
+		{% endif %}
+		</td>
+		<td class="data_c">{{ player.game.get_phase_display }}</td>
+		<td class="data_c">
+		{% if player.done %}
+			{% trans "Done" %}
+		{% else %}
+			{% if player.time_exceeded %}
+				<span style="color: LightCoral">
+					{{ player.game.next_phase_change|timeuntil }} 
+				</span>
+			{% else %}
+				<span style="color: Green">
+					{{ player.next_phase_change|timeuntil }}
+				</span>
+			{% endif %}
+		{% endif %}
+		</td>
+		<td>
+		{% rule_icons player.game.configuration %}
+		</td>
+		<td class="data_c">{{ player.game.visible|yesno }}</td>
+		<td>{{ player.game.slots }}
+		{% ifnotequal player.game.slots 0 %}
+			<a href="{% url leave-game player.game.slug %}">{% trans "Leave game" %}</a>
 		{% endifnotequal %}
 		</td>
 	</tr>
