show ducats in the game screen when finances are enabled

--- a/machiavelli/templates/machiavelli/show_game.html
+++ b/machiavelli/templates/machiavelli/show_game.html
@@ -54,6 +54,10 @@
 {% trans "Rules" %}: {% rule_icons game.configuration %}
 </li>
 {% endif %}
+
+{% if ducats %}
+<li>{% trans "Ducats" %}: {{ ducats }}</li>
+{% endif %}
 </ul>
 </div>
 
