added activity counter to summary page

--- a/machiavelli/templates/machiavelli/summary.html
+++ b/machiavelli/templates/machiavelli/summary.html
@@ -11,6 +11,9 @@
 <p>
 {% blocktrans %}This is a list of all the non-finished games in this server. The first are the ones that you are a player in. If a game has empty slots, you can join it. If you can't find any available games, you can also create one, but it's better if you join an existing game.{% endblocktrans %}
 </p>
+<p>
+{% blocktrans %}At this time, there are {{ activity }} people playing Condottieri games.{% endblocktrans %}
+</p>
 <h2>{% trans "Your games" %}</h2>
 <table>
 	<thead>
