--- a/condottieri_profiles/templates/condottieri_profiles/profile_detail.html
+++ b/condottieri_profiles/templates/condottieri_profiles/profile_detail.html
@@ -1,11 +1,16 @@
 {% extends 'condottieri_profiles/base.html' %}
 
 {% load i18n %}
+{% load avatar_tags %}
 
 {% block head_title %}{% trans "Profile" %}{% endblock %}
 
 {% block body %}
 <h1>{% trans "Profile for" %} {{ user_shown.username }}</h1>
+<div>
+{% avatar user_shown %}<br/>
+<a href="{% url avatar_change %}">{% trans "Change avatar" %}</a>
+</div>
 <dl>
 {% if user_shown.get_profile.name %}
 <dt>{% trans "Name" %}</dt>
