--- a/templates/notification/overthrow_attempt/notice.html
+++ b/templates/notification/overthrow_attempt/notice.html
@@ -11,5 +11,4 @@ actions in the current phase, another player will take your country.{% endblockt
 
 <p>{% blocktrans %}If you do not want to play this game, it's better that you
 let the other player to take your country. This way you won't lose more karma
-for not playing this game.{% endblocktrans %}
-{% blocktrans with game.slug as slug %}The game '{{ slug }}' has just started. You can {% endblocktrans %}</p>
+for not playing this game.{% endblocktrans %}</p>
