--- a/machiavelli/media/machiavelli/css/game.css
+++ b/machiavelli/media/machiavelli/css/game.css
@@ -19,6 +19,13 @@ tr.closed_game a{
 	color: #111;
 }
 
+.thread-list li {
+	list-style-type: none;
+	margin: 0px;
+	padding: 0.5em;
+	border: solid 1px #444;
+}
+
 #game_info {
 	width: 95%;
 	line-height: 2em;
